```mermaid
classDiagram
    direction TD

    %% ==================================
    %% 1. FULL CLASS DEFINITIONS
    %% ==================================

    class Person {
        <<abstract>>
        -personId: String
        -firstName: String
        -lastName: String
        -dateOfBirth: Date
        -nationality: String
        +getFullName(): String
    }
    class Player {
        -jerseyNumber: Integer
        -marketValue: Double
        -playerId: String (FK from Person)
        -teamId: String (FK)
        -position: String
        -status: String
        +train(): void
        +playMatch(): void
    }
    class Coach {
        -licenseLevel: String
        -coachId: String (FK from Person)
        -teamId: String (FK)
        -role: String
        +conductTraining(): void
        +selectSquad(): void
    }
    class Staff {
        -department: String
        -staffId: String (FK from Person)
        -clubId: String (FK)
        -role: String
        +performDuties(): void
    }

    class PersonFactory {
        <<Factory>>
        +createPerson(type: String, ...args): Person
    }

    class Club {
        -clubId: String
        -name: String
        -foundingDate: Date
        -budget: Double
        -league: String
        -stadiumId: String (FK)
        +manageBudget(): void
        +signSponsor(sponsor: Sponsor): void
        +getTeams(): List~Team~
    }
    class Team {
        -teamId: String
        -league: String
        -division: String
        -clubId: String (FK)
        -name: String
        +addPlayer(player: Player): void
        +removePlayer(player: Player): void
        +scheduleTraining(session: TrainingSession): void
    }
    
    class Contract {
        -contractId: String
        -startDate: Date
        -endDate: Date
        -salary: Double
        -clauses: String
        -clubId: String (FK)
        -personId: String (FK to Person)
        +renew(): void
        +terminate(): void
    }
    class Sponsor {
        -sponsorId: String
        -name: String
        -contactPerson: String
        -phone: String
        -email: String
        -contractValue: Double
        -contractStartDate: Date
        -contractEndDate: Date
        +renewContract(newEndDate: Date, newValue: Double): void
    }
    class Stadium {
        -stadiumId: String
        -name: String
        -capacity: Integer
        -address: String
        +hostMatch(match: Match): void
    }
    
    class Match {
        -matchId: String
        -matchDate: Date
        -matchTime: Time
        -homeScore: Integer
        -awayScore: Integer
        -competition: String
        -homeTeamId: String (FK)
        -awayTeamId: String (FK)
        -stadiumId: String (FK)
        -seasonId: String (FK)
        +recordScore(homeScore: Integer, awayScore: Integer): void
        +generateReport(): Map~String, Any~
    }
    class Season {
        -seasonId: String
        -year: Integer
        -league: String
        -startDate: Date
        -endDate: Date
        +getMatches(): List~Match~
        +getStandings(): Map~String, Integer~
    }
    class TrainingSession {
        -sessionId: String
        -sessionDate: Date
        -sessionTime: Time
        -location: String
        -focusArea: String
        -teamId: String (FK)
        +recordAttendance(player: Player, present: Boolean): void
    }

    %% ==================================
    %% 2. RELATIONSHIPS (Arranged in visual zones for space)
    %% ==================================

    %% --- ZONE 1: The "People" Hierarchy & Factory (Left Side) ---
    Person <|-- Player
    Person <|-- Coach
    Person <|-- Staff
    
    PersonFactory ..> Player : <<creates>>
    PersonFactory ..> Coach : <<creates>>
    PersonFactory ..> Staff : <<creates>>

    %% --- ZONE 2: The Core Organization (Center) ---
    Club "1" o--> "0..*" Team : manages

    %% --- ZONE 3: Events & Assets (Right Side) ---
    Season "1" o--> "0..*" Match : contains
    Match "1" --> "1" Season : belongsTo

    %% --- ZONE 4: Connections Across Zones (Creates space) ---
    
    %% Connect Center (Club/Team) to the Right (Assets/Events)
    Club "1" --> "1" Stadium : "owns/uses"
    Club "1" o--> "0..*" Sponsor : has
    Team "1" --> "0..*" Match : participatesIn
    Team "1" --> "0..*" TrainingSession : schedules
    Match "1" --> "1" Stadium : heldAt

    %% Connect Center (Club/Team) to the Left (People)
    Team "1" --> "0..*" Player : includes
    Team "1" <-- "1" Coach : ledBy
    Club "1" --> "0..*" Staff : employs

    %% Link Contracts (Right) to People (Left) in a clean way
    Club "1" --> "0..*" Contract : issues
    Contract "0..*" -- "1" Person : has
```